# ntp-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: NTPClient.cpp  NTPClient.h
tests/: main.cpp
